<resources>
    <string name="app_name">MyBirthdayApp-22300</string>
    <string name="error">Error</string>
    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_log">log</string>
    <string name="btn_ln">ln</string>
    <string name="btn_sqrt">sqrt</string>
    <string name="btn_pow">^</string>
    <string name="btn_fact">!</string>
    <string name="btn_pi">pi</string>
    <string name="btn_e">e</string>
    <string name="btn_open_bracket">(</string>
    <string name="btn_close_bracket">)</string>
    <string name="btn_ac">AC</string>
    <string name="btn_c">C</string>
    <string name="btn_mod">%</string>
    <string name="btn_div">÷</string>
    <string name="btn_mul">×</string>
    <string name="btn_sub">-</string>
    <string name="btn_add">+</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
</resources>